# livecuttt

./: CMakeLists.txt  README_RELEASE.txt
.github/workflows/: macos_release.yml
Presets/: 00 - Default Clean.json  GLT - Chaos Cut.json  HTP - Alien Grinder.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
